# CP2077FovControl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/red4ext/: main.cpp  version.rc
src/redscript/: FovControl.reds
